[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/buildings/building.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/buildings/bot_factory/bot_factory.png" type="Texture" id=2]
[ext_resource path="res://src/buildings/bot_factory/bot_factory.gd" type="Script" id=3]
[ext_resource path="res://src/buildings/bot_factory/bot_factory.tres" type="Resource" id=4]
[ext_resource path="res://assets/fonts/MatchupPro.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/EquipmentPro.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/resources/buy_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/resources/buy_disabled.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/resources/buy_pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/resources/buy_hover.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/fonts/equipment_16.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/resources/ingame_btn_pressed.tres" type="StyleBox" id=12]
[ext_resource path="res://assets/resources/ingame_btn_hover.tres" type="StyleBox" id=13]
[ext_resource path="res://assets/resources/ingame_btn_normal.tres" type="StyleBox" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=17]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=21]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=20]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="CircleShape2D" id=14]
radius = 79.0063

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
resource_name = "fade_in_ui"
length = 0.52
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.52 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="BotFactory" instance=ExtResource( 1 )]
script = ExtResource( 3 )
info = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="." index="2"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -19.0
margin_top = -71.0
margin_right = 21.0
margin_bottom = -31.0
mouse_filter = 1

[node name="OpenButton" type="Button" parent="Control" index="0"]
margin_left = -4.0
margin_top = 18.0
margin_right = 43.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 11 )
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 14 )
text = "Open"

[node name="CanvasLayer" type="CanvasLayer" parent="Control" index="1"]
visible = false

[node name="Control" type="Control" parent="Control/CanvasLayer" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control/CanvasLayer/Control" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.5
margin_top = -187.0
margin_right = 248.5
margin_bottom = 187.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="Title" type="Label" parent="Control/CanvasLayer/Control/Panel/VBoxContainer" index="0"]
margin_right = 433.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 17 )
text = "Produce Bots"
align = 1

[node name="Price" type="Label" parent="Control/CanvasLayer/Control/Panel/VBoxContainer" index="1"]
margin_top = 52.0
margin_right = 433.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = SubResource( 18 )
text = "Price: $500,000"
align = 1
valign = 2
autowrap = true

[node name="Description" type="Label" parent="Control/CanvasLayer/Control/Panel/VBoxContainer" index="2"]
margin_top = 86.0
margin_right = 433.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 18 )
text = "Bots help you mine asteroids and protect you from your enemies. Arm them with lasers and rockets and upgrade them with modules."
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/Panel/VBoxContainer" index="3"]
margin_top = 203.0
margin_right = 433.0
margin_bottom = 254.0
size_flags_vertical = 3

[node name="BotName" type="Label" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer" index="0"]
margin_top = 12.0
margin_right = 214.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 18 )
text = "Bot Name:"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer" index="1"]
margin_left = 218.0
margin_right = 433.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="LineEdit" type="LineEdit" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
margin_right = 215.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 21 )
max_length = 50
placeholder_text = "Gerbert"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Control/Panel/VBoxContainer" index="4"]
margin_top = 258.0
margin_right = 433.0
margin_bottom = 310.0
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/VBoxContainer" index="0"]
margin_top = 20.0
margin_right = 433.0
margin_bottom = 52.0
alignment = 1

[node name="Control" type="Control" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 94.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="BuyButton" type="Button" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 334.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 7 )
text = "Build"

[node name="Control2" type="Control" parent="Control/CanvasLayer/Control/Panel/VBoxContainer/VBoxContainer/HBoxContainer" index="2"]
margin_left = 338.0
margin_right = 433.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="Area2D" type="Area2D" parent="." index="3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
visible = false
position = Vector2( -1, -10 )
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 15 )
anims/fade_in_ui = SubResource( 16 )

[connection signal="button_up" from="Control/OpenButton" to="." method="_on_OpenButton_button_up"]
[connection signal="button_up" from="Control/CanvasLayer/Control/Panel/VBoxContainer/VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_BuyButton_button_up"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
